1.4.2 (SVN/unreleased)
======================

  * Support Z3 template resources (not just file and image resources).
    [mj]

1.4.1
=====

  * Added '/' to the strings that are filtered out in
    BaseRegistry.generateId(). This fixes #7048.
    [davconvent]

1.4.0
=====

  * Add support for automatic grouping mode to the GenericSetup export/import
    code.
    [wichert]

1.4.0-rc1
=========

 * Added a new automatic grouping mode feature. It is turned off by default.
   When enabled the resources will first be sorted into groups with the same
   merging-relevant settings and after that merged. In the groups the order of
   the resources in the registries will be preserved.
   [hannosch]

 * Changed the exportimport handlers to only cook the resources once at the end
   and not after each new resource has been added.
   [hannosch]

1.4.0-beta5
===========

 * Fixed setting of cache headers when the registry is associated with a
   RAMCache.
   [fschulze]

1.4.0-beta4
===========

 * Switched back to getToolByName.
   [wichert]

 * Added portal_kss as registry for kss files.
   [fschulze]

 * Slightly optimized the viewlet manager templates.
   [hannosch]

1.4.0-beta3
===========

 * Replace usage of getToolByNames with getUtility.
   [wichert, hannosch]

1.4.0-beta2
===========

 * Reverted fix of tests, because Zope was wrong.
   [fschulze]

1.4.0-beta1
===========

 * Fixed test failures caused by changes in Zope 2.10.
   [fschulze]

 * Ported bugfixes from 1.3 line.
   [fschulze]

1.4.0-alpha2
============

 * Started to use views and viewlet managers.
   [fschulze]

 * Removed compatibility stuff for Plone version lower than 3.0.
   [fschulze]

1.3.8
=====

 * Cook resources after GS profile import.
   [fschulze]

 * Added missing enabled property handling to updateScript.
   [fschulze]

 * Fixed typo which prevented position-after/insert-after in GS profiles to
   work.
   [fschulze]

1.3.7
=====
